#48 Add group data model and group endpoints
