# src/app.js
@@ -11,14 +11,16 @@ const testsRouter = require("./routes/testsRouter");
 const activitiesRouter = require("./routes/activitiesRouter");
 const authRouter = require("./routes/authRouter");
 const votesRouter = require("./routes/votesRouter");
+const groupsRouter = require("./routes/groupsRouter");
 
 // api documentation: swagger-ui
-const swaggerDocument = require("yamljs").load("./src/swagger.yaml");
+const swaggerDocument = require("yamljs").load("./swagger.yaml");
 const swaggerUi = require("swagger-ui-express");
 
 const { errorHandler, notFound } = require("./middleware/errorHandler");
 
 // middleware
+const { authenticateUser } = require("./middleware/authHandler");
 
 // we shall change the cors origin once the frontend is deployed
 app.use(cors({ origin: process.env.ORIGIN, optionsSuccessStatus: 200 }));
@@ -43,6 +45,7 @@ app.use("/api/v1", testsRouter);
 app.use("/api/v1/activities", activitiesRouter);
 app.use("/api/v1/auth", authRouter);
 app.use("/api/v1/votes", votesRouter);
+app.use("/api/v1/groups", authenticateUser, groupsRouter);
 
 app.use(notFound);
 app.use(errorHandler);
